--- a/limits-service/pom.xml
+++ b/limits-service/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>limits-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>limits-service</name>
 	<description>Demo project for Spring Boot</description>
@@ -23,6 +23,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Finchley.M9</spring-cloud.version>
+		
+		<!-- newly adding -->
+		
+		
 	</properties>
 
 	<dependencies>
@@ -44,6 +48,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		
+		
+		
+		
+		
 	</dependencies>
 
 	<dependencyManagement>
